# linglong-store

./: .gitignore  AGENTS.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: RELEASE_TEMPLATE.md  copilot-instructions.md
.github/workflows/: main.yml
docs/: how-to-install.md  ll-cli-json-install-gui-requirements.md
docs/design/: update_logic_migration.md
env/: .env  .env.dev  .env.test
reference/: demo-commented.css
src/: main.tsx
src-tauri/: Cargo.toml  desktop.template  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  webkit_dmabuf.rs
src-tauri/src/modules/: mod.rs  tray.rs
src-tauri/src/services/: installed.rs  linglong.rs  linglong_env.rs  mod.rs  process.rs  prune.rs
src-tauri/src/services/install/: error_codes.rs  installer.rs  json_parser.rs  mod.rs  models.rs  operations.rs  progress_emitter.rs  slot.rs  state_machine.rs
src-tauri/src/utils/linux/: mod.rs  workarounds.rs
src/apis/: index.ts  request.ts  types.ts
src/constants/: applicationCard.ts  installErrorCodes.ts
src/hooks/: launch.ts  useAppInstall.ts  useAppUninstall.ts  useCheckUpdates.ts  useGlobalInstallProgress.ts  useLinglongEnv.ts  useMenuBadges.ts  useUploadStore.ts
src/layout/: index.module.scss  index.tsx
src/router/: index.tsx
src/services/: analyticsService.ts  installService.ts
src/stores/: appConfig.ts  env.ts  global.ts  installQueue.ts  installedApps.ts  updates.ts
src/styles/: App.scss  Theme.ts
src/types/: common.d.ts
(+70 files in other folders)
